; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_object.c_git_object__size.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_object.c_git_object__size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@git_objects_table = common dso_local global %struct.TYPE_3__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @git_object__size(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = icmp ult i64 %4, 0
  br i1 %5, label %11, label %6

6:                                                ; preds = %1
  %7 = load i64, i64* %3, align 8
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** @git_objects_table, align 8
  %9 = call i64 @ARRAY_SIZE(%struct.TYPE_3__* %8)
  %10 = icmp uge i64 %7, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %6, %1
  store i64 0, i64* %2, align 8
  br label %18

12:                                               ; preds = %6
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** @git_objects_table, align 8
  %14 = load i64, i64* %3, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i64 %14
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  store i64 %17, i64* %2, align 8
  br label %18

18:                                               ; preds = %12, %11
  %19 = load i64, i64* %2, align 8
  ret i64 %19
}

declare dso_local i64 @ARRAY_SIZE(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
